[gd_scene load_steps=29 format=3 uid="uid://ckrnx80ohijh8"]

[ext_resource type="Texture2D" uid="uid://bej0vtt0nxnom" path="res://Assets/Sprites/4 Bat/Bat_attack.png" id="1_85lnx"]
[ext_resource type="Script" uid="uid://crgfh2we4qfu8" path="res://Scripts/fledermaus.gd" id="1_jb64b"]
[ext_resource type="Texture2D" uid="uid://mmjgv10ahcu2" path="res://Assets/Sprites/4 Bat/Bat_walk.png" id="2_jb64b"]
[ext_resource type="Texture2D" uid="uid://biw203vi2v1fh" path="res://Assets/Sprites/4 Bat/Bat_hurt.png" id="3_pmqsh"]
[ext_resource type="Texture2D" uid="uid://bamopugk0rx5n" path="res://Assets/Sprites/4 Bat/Bat_idle.png" id="4_o8rkd"]
[ext_resource type="Texture2D" uid="uid://b0je7m5jo506w" path="res://Assets/Sprites/4 Bat/Bat_death.png" id="5_sk1xi"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3ui0j"]
atlas = ExtResource("1_85lnx")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_winjw"]
atlas = ExtResource("1_85lnx")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6vv4k"]
atlas = ExtResource("1_85lnx")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_aju34"]
atlas = ExtResource("1_85lnx")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkieb"]
atlas = ExtResource("2_jb64b")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_j427c"]
atlas = ExtResource("2_jb64b")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0x26t"]
atlas = ExtResource("2_jb64b")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lorf2"]
atlas = ExtResource("2_jb64b")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nn2jc"]
atlas = ExtResource("3_pmqsh")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_op4hc"]
atlas = ExtResource("3_pmqsh")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ortlv"]
atlas = ExtResource("4_o8rkd")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cipok"]
atlas = ExtResource("4_o8rkd")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_300qs"]
atlas = ExtResource("4_o8rkd")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_x8dwd"]
atlas = ExtResource("4_o8rkd")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ngt4l"]
atlas = ExtResource("5_sk1xi")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_s4yby"]
atlas = ExtResource("5_sk1xi")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ytmam"]
atlas = ExtResource("5_sk1xi")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_c5qv5"]
atlas = ExtResource("5_sk1xi")
region = Rect2(144, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_re0op"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ui0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_winjw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6vv4k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aju34")
}],
"loop": false,
"name": &"angreifen",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkieb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j427c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0x26t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lorf2")
}],
"loop": true,
"name": &"laufen",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nn2jc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_op4hc")
}],
"loop": false,
"name": &"schaden",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ortlv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cipok")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_300qs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x8dwd")
}],
"loop": true,
"name": &"stehen",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ngt4l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s4yby")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ytmam")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c5qv5")
}],
"loop": false,
"name": &"sterben",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hpv7p"]
size = Vector2(28, 19)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3r674"]
size = Vector2(28, 20)

[sub_resource type="CircleShape2D" id="CircleShape2D_jb64b"]
radius = 63.0079

[node name="Fledermaus" type="CharacterBody2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_jb64b")

[node name="FledermausSprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_re0op")
animation = &"angreifen"
frame = 3
frame_progress = 1.0

[node name="FledermausKollision" type="CollisionShape2D" parent="."]
position = Vector2(4, 14)
shape = SubResource("RectangleShape2D_hpv7p")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(4, 17)
shape = SubResource("RectangleShape2D_3r674")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Pause" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="View" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="View"]
position = Vector2(3, 9)
shape = SubResource("CircleShape2D_jb64b")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Pause" to="." method="_on_pause_timeout"]
[connection signal="body_entered" from="View" to="." method="_on_view_body_entered"]
[connection signal="body_exited" from="View" to="." method="_on_view_body_exited"]
